<resources>
    <string name="app_name">MyProgress</string>
    <string name="back">Back</string>
    <string name="start_workout">Start workout</string>
    <string name="workout_history">Workout history</string>
    <string name="exercise_graph">Exercise graph</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="month">1m</string>
    <string name="year">1y</string>
    <string name="all">All</string>
    <string name="empty_chart">No chart data available.</string>
    <string name="name">Name</string>
    <string name="date">Date:</string>
    <string name="work_time">Work time:</string>
    <string name="rest_time">Rest time:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="name_of_the_workout">Name of the workout</string>
    <string name="reps_item">Reps:</string>
    <string name="sets_item">Sets:</string>
    <string name="weight_item">Weight:</string>
    <string name="start_timer">00 : 00 . 00</string>
    <string name="workout_name">Workout name</string>
    <string name="s">S</string>
    <string name="play">Play</string>
    <string name="set">Set</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="exercise_name">Exercise name</string>
    <string name="add_set">Add set</string>
    <string name="save_set">Save set</string>
    <string name="sets">Sets</string>
    <string name="add_exercise">Add exercise</string>
    <string name="search_text">Search by name, bodypart or difficulty…</string>
    <string name="create_new_exercise">Create new exercise</string>
    <string name="bodypart">BodyPart:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="delete_item">Delete item</string>
    <string name="new_exercise">New exercise</string>
    <string name="name_of_new_exercise">Name of new exercise</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="choosing_difficulty">Choosing difficulty</string>
    <string name="choosing_bodypart">Choosing bodypart</string>
    <string name="add_selected_exercises">Add %1$d selected exercises</string>


</resources>