<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background_blue">

    <TextView
        android:id="@+id/backButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/back"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/setsTV"
        app:layout_constraintEnd_toStartOf="@id/exerciseName"/>

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginEnd="60dp"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repsTV"/>

    <TextView
        android:id="@+id/setsTV"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/sets_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseName"
        app:layout_constraintEnd_toStartOf="@id/repsTV"
        app:layout_constraintBottom_toTopOf="@id/rvLayout"/>

    <TextView
        android:id="@+id/repsTV"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/reps_item"
        app:layout_constraintStart_toEndOf="@id/setsTV"
        app:layout_constraintTop_toBottomOf="@id/exerciseName"
        app:layout_constraintEnd_toStartOf="@id/weightTV"
        app:layout_constraintBottom_toTopOf="@id/rvLayout"/>

    <TextView
        android:id="@+id/weightTV"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/weight_item"
        app:layout_constraintStart_toEndOf="@id/repsTV"
        app:layout_constraintTop_toBottomOf="@id/exerciseName"
        app:layout_constraintBottom_toTopOf="@id/rvLayout"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/repsTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/addSetButton"/>

    <Button
        android:id="@+id/addSetButton"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/add_set"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/saveSetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/saveSetButton"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:text="@string/save_set"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>