<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/backButton"
        android:layout_width="80dp"
        android:layout_height="90dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back"
        android:background="@drawable/baseline_arrow_back_24"/>

    <Spinner
        android:id="@+id/exercise"
        android:layout_width="320dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repsChart"
        android:text="@string/reps"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise"/>

    <TextView
        android:id="@+id/weightChart"
        android:text="@string/weight"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise"/>

    <TextView
        android:id="@+id/timeChart"
        android:text="@string/time"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise"/>

    <com.github.mikephil.charting.charts.LineChart
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/graph"
        app:layout_constraintTop_toBottomOf="@id/repsChart"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/daysChart"
        android:text="@string/month"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/monthsChart"
        android:text="@string/year"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/yearsChart"
        android:text="@string/all"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/textview_frame_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/customMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_chart"
        android:textStyle="bold"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repsChart"
        app:layout_constraintBottom_toTopOf="@id/monthsChart"/>

</androidx.constraintlayout.widget.ConstraintLayout>