<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/linearCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background_blue">

                <TextView
                    android:id="@+id/setsTextView"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:text="@string/sets"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

                <EditText
                    android:id="@+id/editTextReps"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:autofillHints="Reps"
                    app:layout_constraintStart_toEndOf="@+id/setsTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:inputType="number"
                    android:hint="@string/reps" />

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:autofillHints="Weight"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/editTextReps"
                    app:layout_constraintTop_toTopOf="parent"
                    android:inputType="number"
                    android:hint="@string/weight" />

                <Button
                    android:id="@+id/removeRowButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/black"
                    android:text="@string/minus"
                    android:layout_margin="5dp"
                    app:layout_constraintStart_toEndOf="@+id/editTextWeight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="25sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>


