<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/exerciseCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:textColor="@color/googlePurple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addExerciseButton"
            android:text="@string/name" />

        <TextView
            android:id="@+id/bodyPartTV"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/bodypart"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/bodyPartTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/bodyPartTV"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/difficultyTV"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/difficulty"
            android:textColor="@color/light_grey"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyPartTV"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/difficultyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/difficultyTV"
            app:layout_constraintTop_toBottomOf="@+id/bodyPartTV" />

        <Button
            android:id="@+id/deleteExerciseButton"
            android:layout_width="70dp"
            android:layout_height="48dp"
            android:contentDescription="@string/delete_item"
            android:backgroundTint="@color/red"
            android:drawableBottom="@drawable/baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addExerciseButton"/>


        <Button
            android:id="@+id/addExerciseButton"
            android:layout_width="70dp"
            android:contentDescription="@string/add_exercise"
            android:layout_height="48dp"
            android:backgroundTint="@color/htmlDarkGrey"
            android:drawableBottom="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/deleteExerciseButton"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>