<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/workoutNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="30sp"
                android:textColor="@color/googleOrange"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/deleteButton"
                android:text="@string/name" />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/date"
                android:textColor="@color/lightgray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/workoutNameTextView" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/dateTV"
                app:layout_constraintTop_toBottomOf="@+id/workoutNameTextView" />

            <TextView
                android:id="@+id/timerTV"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/work_time"
                android:textColor="@color/lightgray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTV" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/timerTV"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

            <TextView
                android:id="@+id/restTimeTV"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/rest_time"
                android:textColor="@color/lightgray"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timerTV" />

            <TextView
                android:id="@+id/restTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/timerTV"
                app:layout_constraintTop_toBottomOf="@+id/timerTextView" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                android:textSize="25sp"
                android:backgroundTint="@color/googleRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>